namespace GameSimulator
{
    public enum PlatformType
    {
        WindowsPC,
        Mobile,
        Console
    }
}