namespace GameSimulator
{
    public class AdventureGame : BaseGame
    {
        public AdventureGame(string name, HardwareSpecs requirements) : base(name, "Пригоди", requirements) { }
    }
}